<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/steps"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StepActivity2">

    <TextView
        android:id="@+id/backTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="22dp"
        android:onClick="goMain"
        android:text="@string/back"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/stepHeaderTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/steps"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="174dp" />

    <ProgressBar
        android:id="@+id/stepProgressBarSubPage"
        style="@style/CircularDeterminateProgressBarPink"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/todayTextView"
        tools:progress="60" />

    <TextView
        android:id="@+id/stepProgressTextSubpage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/stepProgressBarSubPage"
        app:layout_constraintEnd_toEndOf="@+id/stepProgressBarSubPage"
        app:layout_constraintStart_toStartOf="@+id/stepProgressBarSubPage"
        app:layout_constraintTop_toTopOf="@+id/stepProgressBarSubPage"
        tools:text="60%" />

    <TextView
        android:id="@+id/todayTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/today"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stepHeaderTextView" />

    <TextView
        android:id="@+id/currentBedsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="56dp"
        android:text="@string/stepNumberPlaceholder"
        android:textSize="60sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/todayTextView" />

    <TextView
        android:id="@+id/goalSentenceTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:text="@string/stepGoalPlaceholder"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentBedsTextView" />

    <TextView
        android:id="@+id/remainingProgressSentenceTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="36dp"
        android:text="@string/stepRemainingProgressPlaceholder"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goalSentenceTextView" />

    <TextView
        android:id="@+id/seperatorTextView"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="56dp"
        android:background="@color/pinkProgressPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/remainingProgressSentenceTextView" />

    <LinearLayout
        android:id="@+id/stepSentenceHolderLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/seperatorTextView"
        tools:layout_editor_absoluteX="1dp">

        <TextView
            android:id="@+id/youvewalkedTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/youvewalked"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/numberOfStepsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/stepsSinceLastLoginPlaceholder"
            android:textSize="45sp" />

        <TextView
            android:id="@+id/stepsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/stepsSentence"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/sincelastloginTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/sincelastlogin"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stepSentenceHolderLinearLayout" />

    <LinearLayout
        android:id="@+id/bottomNav"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/white"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/calendarImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="goCalendar"
            app:srcCompat="@drawable/ic_calendar_foreground"
            app:tint="@color/iconColor" />

        <ImageView
            android:id="@+id/lotusImageView"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="goMain"
            android:scaleX="2"
            android:scaleY="2"
            android:translationY="5dp"
            app:srcCompat="@drawable/lotusicon" />

        <ImageView
            android:id="@+id/settingsImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="goSettings"
            app:srcCompat="@drawable/ic_settings_foreground"
            app:tint="@color/iconColor" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>